src/test/ui/issues/50000-59999/issue-50264-inner-deref-trait/option-as_deref.rs
fn main() {
    let _result = &Some(42).as_deref();
//~^ ERROR no method named `as_deref` found for enum `Option<{integer}>`
}
